--- a/.env.local
+++ b/.env.local
@@ -5,4 +5,4 @@ DB_URL="postgresql://docker:docker@localhost:5432/pizzashop"
 
 JWT_SECRET_KEY="my-super-secret-key"
 
-RESEND_API_KEY=""
+RESEND_API_KEY="."
